--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,5 @@
+/* Description: This file is used to import all the css files in the project */
+
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 
